<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CadastroUsuario"
        android:orientation="vertical"
        android:padding="16dp">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nomeUser"
            android:textSize="16sp"
            android:layout_marginTop="10dp"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textSize="16sp"
            android:id="@+id/txtUsuario"
            android:layout_marginTop="10dp"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loginCasdastro"
            android:textSize="16sp"
            android:layout_marginTop="10dp"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textSize="16sp"
            android:id="@+id/loginCadastro"
            android:layout_marginTop="10dp"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:text="@string/senhaUsuario"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:id="@+id/txtSenhaUsuario"
            android:inputType="textPassword"/>

    <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/cadastrar"
            android:layout_marginTop="10dp"
            android:textSize="16sp"
            android:id="@+id/btnCadastrarUsuario"/>

</LinearLayout>